--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.gamefree.dailyhoroscopes"
+    package="com.appfree.dailyhoroscopes"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -8,22 +8,23 @@
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
-        android:name="com.gamefree.dailyhoroscopes.MyApplication"
+        android:name="com.appfree.dailyhoroscopes.MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Sherlock.Light" >
+        android:theme="@style/Apptheme" >
         <activity
-            android:name="com.gamefree.dailyhoroscopes.MainActivity"
+            android:name="com.appfree.dailyhoroscopes.MainActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.gamefree.dailyhoroscopes.StartActivity"
+            android:name="com.appfree.dailyhoroscopes.StartActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,23 +32,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.gamefree.dailyhoroscopes.DetailActivity" >
+        <activity android:name="com.appfree.dailyhoroscopes.DetailActivity" >
         </activity>
         <activity android:name="com.facebook.LoginActivity" />
-        
-        
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-        <activity
-            android:name="com.google.android.gms.ads.AdActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
 
-        <service android:name="com.gamefree.dailyhoroscopes.service.LocalPushServiceLocalPushService" >
+        <service android:name="com.appfree.dailyhoroscopes.service.LocalPushServiceLocalPushService" >
         </service>
 
         <activity
-            android:name="com.gamefree.dailyhoroscopes.SettingActivity"
+            android:name="com.appfree.dailyhoroscopes.SettingActivity"
             android:label="@string/caidat" >
         </activity>
 
@@ -58,6 +51,16 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/app_id" />
-        </application>
+
+        <activity
+            android:name="com.startapp.android.publish.list3d.List3DActivity"
+            android:taskAffinity="com.appfree.dailyhoroscopes.AppWall"
+            android:theme="@android:style/Theme" />
+        <activity
+            android:name="com.startapp.android.publish.AppWallActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:taskAffinity="com.appfree.dailyhoroscopes.AppWall"
+            android:theme="@android:style/Theme.Translucent" />
+    </application>
 
 </manifest>
